--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ header {
   background-color: #1F2937;
   height: 50px;
   padding: 10px 0px;
-  /* width: 100%; */
+  width: 100%;
 
 }
 
@@ -166,4 +166,17 @@ footer {
 .signup-header {
   font-size: 20px;
   font-weight: bold;
+}
+
+footer {
+  width: 100%;
+  height: 30px;
+  color: white;
+  align-items: center;
+
+}
+
+footer p {
+  text-align: right;
+  margin: auto;
 }
