--- a/style.css
+++ b/style.css
@@ -7,15 +7,12 @@
 }
 
 body {
-  /* height: 100vh; */
-  /* overflow: hidden; */
   font-family: Roboto, sans-serif;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-
-
+  background-color: #1F2937;
 }
 
 a {
@@ -30,11 +27,12 @@ header {
   height: 50px;
   padding: 10px 0px;
   width: 100%;
-
+  max-width: 800px;
 }
 
 .logo, .header-link {
   color: #F9FAF8;
+  padding: 5px 0px;
 }
 
 .logo {
@@ -46,7 +44,11 @@ ul {
   list-style-type: none;
   display: flex;
   gap: 20px;
-  /* padding: 0px 0px 0px 10px; */
+}
+
+.hero-container {
+  display: flex;
+  max-width: 800px;
 }
 
 .hero {
@@ -55,6 +57,7 @@ ul {
   align-items: center;
   background-color: #1F2937;
   height: 280px;
+  max-width: 1000px;
 }
 
 .hero-title {
@@ -67,7 +70,6 @@ ul {
   font-size: 18px;
   color: #E5E7EB;
   margin-top: 8px;
-
 }
 
 button {
@@ -76,6 +78,7 @@ button {
   border-radius: 5px;
   border: none;
   color: white;
+  font-weight: bold;
   margin-top: 8px;
 }
 
@@ -83,18 +86,22 @@ button {
   width: 300px;
 }
 
-
-
 h2 {
   text-align: center;
   margin: 30px 0px;
 }
 
+.info {
+  background-color: white;
+  width: 100%;
+}
+
 .card-container {
   display: flex;
+  justify-content: center;
   gap: 45px;
   text-align: center;
-
+  padding-bottom: 45px;
 }
 
 .card {
@@ -110,15 +117,10 @@ h2 {
   border-radius: 10px;
 }
 
-footer {
-  display: flex;
-  background-color: #1F2937;
-}
-
 .testimonial {
-  background-color: #E5E7EB;
+  background-color: #e6ebe5;
   padding: 55px;
-  margin-top: 40px;
+  max-width: 1200px;
 }
 
 .testimonial-text{
@@ -135,20 +137,20 @@ footer {
 }
 
 .signup {
+  background-color: white;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 40px 0px;
+  /* margin: 40px 0px; */
+  padding: 40px 0px;
 }
-
 
 .signup-container {
   display: flex;
   background-color: #3882F6;
-  border-radius: 10px;
-  padding: 25px 40px;
-
+  border-radius: 5px;
+  padding: 30px 40px;
 }
 
 .signup-header, .signup-text {
@@ -169,14 +171,17 @@ footer {
 }
 
 footer {
-  width: 100%;
-  height: 30px;
-  color: white;
+  background-color: #1F2937;
+  text-align: center;
+  display: flex;
+  justify-content: center;
   align-items: center;
-
+  width: 100%;
+  height: 40px;
+  color: white;
+  max-width: 1000px;
 }
 
 footer p {
-  text-align: right;
-  margin: auto;
+  font-size: 12px;
 }
